--- a/CarClassification.ipynb
+++ b/CarClassification.ipynb
@@ -113,29 +113,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading data from https://storage.googleapis.com/tensorflow/keras-applications/mobilenet_v3/weights_mobilenet_v3_large_224_1.0_float_no_top_v2.h5\n",
-      "\u001b[1m12683000/12683000\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 0us/step\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'num_classes' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[53], line 9\u001b[0m\n\u001b[1;32m      7\u001b[0m x \u001b[38;5;241m=\u001b[39m GlobalAveragePooling2D()(x)\n\u001b[1;32m      8\u001b[0m x \u001b[38;5;241m=\u001b[39m Dense(\u001b[38;5;241m1024\u001b[39m, activation\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrelu\u001b[39m\u001b[38;5;124m'\u001b[39m)(x)\n\u001b[0;32m----> 9\u001b[0m predictions \u001b[38;5;241m=\u001b[39m Dense(\u001b[43mnum_classes\u001b[49m, activation\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msoftmax\u001b[39m\u001b[38;5;124m'\u001b[39m)(x)\n\u001b[1;32m     11\u001b[0m model \u001b[38;5;241m=\u001b[39m Model(inputs\u001b[38;5;241m=\u001b[39mbase_model\u001b[38;5;241m.\u001b[39minput, outputs\u001b[38;5;241m=\u001b[39mpredictions)\n\u001b[1;32m     13\u001b[0m \u001b[38;5;66;03m# Freeze the base model layers\u001b[39;00m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'num_classes' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from tensorflow.keras.applications import MobileNetV3Large\n",
     "from tensorflow.keras.models import Model\n",
@@ -154,6 +134,66 @@
     "    layer.trainable = False\n",
     "\n",
     "model.compile(optimizer='adam', loss='categorical_crossentropy', metrics=['accuracy'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/homebrew/lib/python3.11/site-packages/keras/src/trainers/data_adapters/py_dataset_adapter.py:121: UserWarning: Your `PyDataset` class should call `super().__init__(**kwargs)` in its constructor. `**kwargs` can include `workers`, `use_multiprocessing`, `max_queue_size`. Do not pass these arguments to `fit()`, as they will be ignored.\n",
+      "  self._warn_if_super_not_called()\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m255/255\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m309s\u001b[0m 1s/step - accuracy: 0.0068 - loss: 5.3529 - val_accuracy: 0.0066 - val_loss: 5.2768\n",
+      "Epoch 2/10\n",
+      "\u001b[1m255/255\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m268s\u001b[0m 1s/step - accuracy: 0.0061 - loss: 5.2782 - val_accuracy: 0.0085 - val_loss: 5.2762\n",
+      "Epoch 3/10\n",
+      "\u001b[1m255/255\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m268s\u001b[0m 1s/step - accuracy: 0.0066 - loss: 5.2776 - val_accuracy: 0.0085 - val_loss: 5.2763\n",
+      "Epoch 4/10\n",
+      "\u001b[1m255/255\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m267s\u001b[0m 1s/step - accuracy: 0.0082 - loss: 5.2771 - val_accuracy: 0.0085 - val_loss: 5.2758\n",
+      "Epoch 5/10\n",
+      "\u001b[1m255/255\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3662s\u001b[0m 14s/step - accuracy: 0.0068 - loss: 5.2767 - val_accuracy: 0.0085 - val_loss: 5.2735\n",
+      "Epoch 6/10\n",
+      "\u001b[1m255/255\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3190s\u001b[0m 13s/step - accuracy: 0.0072 - loss: 5.2741 - val_accuracy: 0.0085 - val_loss: 5.2714\n",
+      "Epoch 7/10\n",
+      "\u001b[1m255/255\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1245s\u001b[0m 5s/step - accuracy: 0.0100 - loss: 5.2696 - val_accuracy: 0.0085 - val_loss: 5.2693\n",
+      "Epoch 8/10\n",
+      "\u001b[1m255/255\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m6251s\u001b[0m 25s/step - accuracy: 0.0080 - loss: 5.2650 - val_accuracy: 0.0085 - val_loss: 5.2679\n",
+      "Epoch 9/10\n",
+      "\u001b[1m255/255\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1411s\u001b[0m 6s/step - accuracy: 0.0098 - loss: 5.2613 - val_accuracy: 0.0088 - val_loss: 5.2684\n",
+      "Epoch 10/10\n",
+      "\u001b[1m255/255\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m6450s\u001b[0m 25s/step - accuracy: 0.0094 - loss: 5.2563 - val_accuracy: 0.0086 - val_loss: 5.2650\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.src.callbacks.history.History at 0x2a883efd0>"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.fit(train_generator, epochs=10, validation_data=val_generator)"
    ]
   }
  ],
